fixing the spacing

--- a/home/about/about.css
+++ b/home/about/about.css
@@ -18,9 +18,10 @@ body {
 }
 
 #header h1{
-    font-size: 30px;
+    font-size: 50px;
     font-family: cursive;
     color: black;
+    text-align: center;
 }
 
 #mu, #ov, #yaw, #jtf{
@@ -50,7 +51,7 @@ body {
 
 
 #header nav{
-    width: 35%;
+    width: 40%;
     margin-left: auto;
     margin-right: auto;
     padding: 25px 0px;
@@ -70,13 +71,23 @@ body {
     text-decoration: none;
     color: black;
     font-family: cursive;
+    text-align: justify;
+}
+
+#header nav a::after{
+    display: inline-block;
+    width: 100%;
+    content: "";
 }
 
 #mu p{
     width: 450px;
+    height: 100px;
 }
 
 img{
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
+    /* margin-left: 80px; */
+    float: right;
 }
